Improvements to diagrams.

--- a/docs/decision_language/master03-overview.adoc
+++ b/docs/decision_language/master03-overview.adoc
@@ -10,14 +10,14 @@ image::{common_diagrams_uri}/conceptual_framework_overview.svg[id=conceptual_fra
 
 In the above, the top part illustrates process and plan definitions, of which the _care pathway_ is a specific example in clinical medicine. In openEHR these are expressed as Work Plans, defined by the {openehr_task_planning}[openEHR Task Planning model^]. In other environments, OMG BPMN/CMMN representation might be used.
 
-Below the process component, the two components of the DSL framework decribed in this specification are shown:
+Below the process component, the two components of the decision support framework decribed in this specification are shown:
 
 * *Decision Support Module (DSM)*: modules containing decision functions that generate inferences from input variables representing real world entities being reasoned about;
 * *Subject Proxy Object (SPO)*: a definition of state variables and events characterising a real-world entity in a convenient form for use in a DSM.
 
-The last component (shown at bottom left) is the _Data Access Binding (DAB)_, which is bindings to data sources and repositories, such as patient health records and monitoring devices. Such data are extracted to become the logical data elements in a Data Proxy.
+The remaining component (shown at bottom left) is the _Data Access Binding (DAB)_, which consists of bindings to data sources and repositories, such as patient health records and monitoring devices. Data from these locations is extracted to populate the input variables of a Subject Proxy.
 
-In this environment, the Process Definition component may be understood as a primary user of DSMs and subject proxies, providing it respectively with access to real world state (e.g. patient vital signs) and the results of inferencing on such state variables. As a consequence (and unlike BPMN or CMMN), formal decision / condition expressions do not appear in process definitions expressed as Task Plans.
+In this environment, the Process Definition component may be understood as a primary user of DSMs and SPOs, providing it respectively with access to real world state (e.g. patient vital signs) and the results of inferencing on such state variables. As a consequence (and unlike BPMN), formal expressions do not appear in process definitions, only references to variables and functions.
 
 The essential characterisation of _decision support logic_ understood in this specification is a function-oriented logic that generates deductive inferences, such as clinical classification of patients (including diagnosis), from input variables representing known facts about the patient. These include results obtained from real world observation, measurement, imaging etc, as well as previous confirmed diagnosis and records of previous procedures. This specification considers decision support logic to consist of _definitions_, as well as various logical elements, including:
 
@@ -31,11 +31,11 @@ Rules typically contain _conditions_ i.e. Boolean-returning expressions such as 
 
 Conditions, rules, rule-sets and other inference-generating structures that may include them constitute fragments of knowledge that need to be able to be authored and change-managed independently from contexts that use them, rather than being directly written into (say) if/then/else logic chains as a programmer would typically do. This specification accordingly provides a representational form for such logic, along with artefacts that connect them to data access services (e.g. EHR) and also enable them to be invoked by user contexts (e.g. workflow engines).
 
-Decision support logic necessarily requires a way of defining and expressing its 'input variables'. This is not just a question of creating typed variables, but one of semantics. The 'variables' used in rules represent an _ontic_ view of the subject, that a true description of its state in reality. For example, a rule for inferring atrial fibrillation and other forms of arrhythmia may refer to the input variables `_heart_rate_` and `_heart_rhythm_`. The meaning of these variables is that they represent the real heart rate and rhythm of the patient, rather than being just any heart rate, e.g. from a measurement 3 years ago. Similarly, a variable `_is_type1_diabetic_` represents a proposition about the patient in reality.
+Decision support logic necessarily requires a way of defining and expressing its _input variables_. This is not just a question of creating typed variables, but one of semantics. The 'variables' used in rules represent an _ontic_ view of the subject, that is, a true description of its state in reality. For example, a rule for inferring atrial fibrillation and other forms of arrhythmia may refer to the input variables `_heart_rate_` and `_heart_rhythm_`. The meaning of these variables is that they represent the real heart rate and rhythm of the patient, rather than being just any heart rate, e.g. from a measurement 3 years ago. Similarly, a variable `_is_type1_diabetic_` represents a proposition about the patient in reality.
 
-A second requirement of variables that may be mentioned within rules is that they are close to the language of the domain, for example `_is_type1_diabetic_` and `_has_family_history_of_breast_cancer_` are things a clinical professional instantly understands. Semantically, they tend to be highly precoordinated forms of more technical representations, e.g. `problem_list.contains (type = 73211009|diabetes mellitus|, status=confirmed)`.
+A second requirement of rule variables is that they are close to the language of the domain, for example `_is_type1_diabetic_` and `_has_family_history_of_breast_cancer_` are things a clinical professional instantly understands. Semantically, they tend to be highly precoordinated forms of more technical representations, e.g. `problem_list.contains (type = 73211009|diabetes mellitus|, status=confirmed)`.
 
-In order to support the definition of such variables, a connection is of course needed to the technical representation of data found within EHRs, documents, lab messages, real-time devices and other sources. These latter constitute the _epistemic_ knowledge base for extracting the ontic view. They also tend to be highly variable, due to different concrete standards, products and databases. The ability to write decision logic in a natural yet computable way thus requires support for various levels of representation above the purely technical data items and APIs found in healthcare information systems. The Subject Proxy component in the scheme illustrated above constitutes the top-most reification of underlying data in the form of domain-comprehensible ontic variables.
+In order to support the definition of such variables, a connection is of course needed to the technical representation of data found within EHRs, documents, lab messages, real-time devices and other sources. These latter constitute the _epistemic_ knowledge base for extracting the ontic view. They also tend to be highly variable, due to different concrete standards, products and databases. The ability to write decision logic in a natural yet computable way - independent of specific access methods and type systems - thus requires support for various levels of representation above the purely technical data items and APIs found in healthcare information systems. The Subject Proxy component in the scheme illustrated above constitutes the top-most reification of underlying data in the form of domain-comprehensible ontic variables.
 
 == Representation Scheme
 
