--- a/docs/UML/classes/state_variable.adoc
+++ b/docs/UML/classes/state_variable.adoc
@@ -1,21 +1,21 @@
-=== STATE_VARIABLE Class
+=== STATE_VARIABLE<TT> Class
 
 [cols="^1,3,5"]
 |===
 h|*Class*
-2+^h|*STATE_VARIABLE*
+2+^h|*STATE_VARIABLE<TT>*
 
 h|*Description*
-2+a|
+2+a|Variable that is updated by polling, and is regarded as correct as long as the last update occurred at or more recently than the required currency.
 
 h|*Inherit*
-2+|`MODULE_FEATURE`
+2+|`EXTERNAL_VARIABLE`
 
 h|*Attributes*
 ^h|*Signature*
 ^h|*Meaning*
 
 h|*0..1*
-|*currency*: `Iso8601_duration`
-a|
+|*required_currency*: `Iso8601_duration`
+a|Required currency of data in target system (e.g. EHR) to be considered valid in the context of this Task.
 |===
