--- a/docs/UML/classes/plan_event.adoc
+++ b/docs/UML/classes/plan_event.adoc
@@ -6,10 +6,10 @@ h|*Class*
 2+^h|*_PLAN_EVENT<> (abstract)_*
 
 h|*Description*
-2+a|Entity representing an Event generated during system execution. Descendants define details of each kind of Event known in the system.
+2+a|Any kind of Event defined as part of a Plan definition.
 
 h|*Inherit*
-2+|`LOCATABLE`
+2+|`EVENT`
 
 h|*Attributes*
 ^h|*Signature*
