--- a/docs/tp_examples/master.adoc
+++ b/docs/tp_examples/master.adoc
@@ -39,7 +39,6 @@ include::master00-amendment_record.adoc[leveloffset=+1]
 
 === Support
 
-
 The work reported in this specification has been funded by the following organisations:
 
 * DIPS, Norway
@@ -63,6 +62,7 @@ include::master01-preface.adoc[leveloffset=+1]
 include::master02-overview.adoc[leveloffset=+1]
 include::master03-teamwork.adoc[leveloffset=+1]
 include::master04-order_management.adoc[leveloffset=+1]
+include::master05-chemo.adoc[leveloffset=+1]
 
 
 //
