Update RCHOPS21 chemotherapy example.

--- a/docs/decision_language/master08-full_example.adoc
+++ b/docs/decision_language/master08-full_example.adoc
@@ -19,40 +19,40 @@ admin
 state
     weight: Quantity
         currency
-            3d
+            3 days
             
     height: Quantity
         currency
-            1y
+            1 year
     
     systolic_blood_pressure: Quantity
         currency
-            1min
+            1 min
         range
             critical_high:  >= Critical_high_bp
 
     diastolic_blood_pressure: Quantity
         currency
-            1min
+            1 min
 
     heart_rate: Quantity
         currency
-            30s
+            30 sec
             
     oxygen_sat: Proportion
         currency
-            30s
+            30 sec
         range
             low:  < Low_oxygen_sat
             
     blood_glucose: Quantity
         currency
-            2h
+            2 hour
             
     // Eastern Cooperative Oncology Group score
     ecog: Integer
         currency
-            1w
+            1 week
     
 derived
     age: Duration
@@ -72,11 +72,11 @@ extend
 state
     staging: Terminology_term «ann_arbor_staging» 
         currency
-            30days
+            30 days
 
     metastases: Terminology_term «pos_neg_vs» 
         currency
-            30days
+            30 days
 
 derived
     metastatic:
@@ -95,7 +95,8 @@ extend
     Core_patient
     
 historical
-    is_type1_diabetic:          Boolean
+
+    is_type1_diabetic: Boolean
         Result <- has_diagnosis (73211009|diabetes mellitus|, 
             |<Current_episode.start|)
         
@@ -103,16 +104,17 @@ historical
         Result <- has_diagnosis (367390009|hypertension in obstetric context|, 
             |< Current_episode.start|)
         
-    previous_pre_eclampsia:     Boolean
+    previous_pre_eclampsia: Boolean
         Result <- has_diagnosis (398254007|pre-eclampsia|, 
             |< Current_episode.start|)
         
-    previous_eclampsia:         Boolean
+    previous_eclampsia: Boolean
         Result <- has_diagnosis (15938005|eclampsia|, 
             |< Current_episode.start|)
         
 episode -- current pregnancy
-    has_gestational_diabetes:   Boolean
+
+    has_gestational_diabetes: Boolean
         Result <- has_diagnosis (11687002|Gestational diabetes mellitus|, 
             |>= Current_episode.start|)
  
@@ -120,15 +122,15 @@ episode -- current pregnancy
         Result <- has_diagnosis (367390009|hypertension in obstetric context|, 
             |>= Current_episode.start|)
 
-    has_pre_eclampsia:          Boolean
+    has_pre_eclampsia: Boolean
         Result <- has_diagnosis (398254007|pre-eclampsia|, 
             |>= Current_episode.start|)
 
-    has_eclampsia:              Boolean
+    has_eclampsia: Boolean
         Result <- has_diagnosis (15938005|eclampsia|, 
             |>= Current_episode.start|)
 
-    anaemia_type:               Terminology_term
+    anaemia_type: Terminology_term
         Result <- 
             if not has_diagnosis (87522002|anaemia|, |>= Current_episode.start|)
                 |excluded|
@@ -148,7 +150,7 @@ state
 
 events
     haemorrhage:
-        vaginal_blood_flow<critical_high>
+        vaginal_blood_flow <critical_high>
         
     contractions_commenced:
         <asserted>
@@ -225,18 +227,42 @@ extend
     Cancer_patient
     
 state
-    tnm_t: String {P60D}
-    tnm_n: String {P60D}
-    tnm_m: String {P60D}
-    tnm_g: String {P60D}
-
-    estrogen_receptor:      Terminology_term «pos_neg_vs» {P60D}
-    progesterone_receptor:  Terminology_term «pos_neg_vs» {P60D}
-    her2_expression:        Terminology_term «pos_neg_vs» {P60D}
+    tnm_t: String
+        currency 
+            60 days
+            
+    tnm_n: String
+        currency 
+            60 days
+            
+    tnm_m: String
+        currency 
+            60 days
+            
+    tnm_g: String
+        currency 
+            60 days
+            
+    estrogen_receptor: Terminology_term «pos_neg_vs»
+        currency 
+            60 days
+            
+    progesterone_receptor:  Terminology_term «pos_neg_vs»
+        currency 
+            60 days
+            
+    her2_expression: Terminology_term «pos_neg_vs»
+        currency 
+            60 days
     
-    ki67:               Quantity {P60D}
-    ejection_fraction:  Quantity {P30D}
-    
+    ki67: Quantity
+        currency 
+            60 days
+            
+    ejection_fraction: Quantity
+        currency 
+            60 days
+                
 derived
     er_negative:
         estrogen_receptor = |negative|
