Typo fix (per M Polajnar) for SPECPROC-33- Support progressive data set creation.

--- a/docs/task_planning/master06-6-definition_data_sets.adoc
+++ b/docs/task_planning/master06-6-definition_data_sets.adoc
@@ -29,7 +29,7 @@ Both kinds of data sets described here may be the same as or related to template
 
 === Progressive Data Capture
 
-Where Tasks involved data entry as part of the work, the data capture may occur over more than one Task, to be committed at some final Task when the data-set is deemed complete by the user. To support such progressive data capture, the notion of a _commit group_ is used. This is an identifier for a logical data-set that might be entered in one or more forms over a number of Tasks. It is formally represented by the optional `_commit_group_` attribute in `CAPTURE_DATASET_SPEC`, of type `DATASET_COMMIT_GROUP`. To represent a progressively entered data-set, an instance of this type is used on each Task contributing to the data-set (need not be contiguous), with all but the final instance having the Boolean attribute `_completion_step_` set to False. The final Task in the series is marked by setting this flag True, at which point the execution engine may perform a standard commit action. The following diagram illustrates a typical instance of this structure.
+Where Tasks involve data entry as part of the work, the data capture may occur over more than one Task, to be committed at some final Task when the data-set is deemed complete by the user. To support such progressive data capture, the notion of a _commit group_ is used. This is an identifier for a logical data-set that might be entered in one or more forms over a number of Tasks. It is formally represented by the optional `_commit_group_` attribute in `CAPTURE_DATASET_SPEC`, of type `DATASET_COMMIT_GROUP`. To represent a progressively entered data-set, an instance of this type is used on each Task contributing to the data-set (need not be contiguous), with all but the final instance having the Boolean attribute `_completion_step_` set to False. The final Task in the series is marked by setting this flag True, at which point the execution engine may perform a standard commit action. The following diagram illustrates a typical instance of this structure.
 
 [.text-center]
 .Progressive data capture structure
